--- a/haskread-platform-ui/stack.yaml
+++ b/haskread-platform-ui/stack.yaml
@@ -8,8 +8,8 @@
 # A snapshot resolver dictates the compiler version and the set of packages
 # to be used for project dependencies. For example:
 #
-snapshot: lts-22.43
-# snapshot: nightly-2024-07-05
+# snapshot: lts-23.10
+snapshot: nightly-2025-02-24
 # snapshot: ghc-9.6.6
 #
 # The location of a snapshot can be provided as a file or url. Stack assumes
@@ -40,15 +40,9 @@ extra-deps:
   commit: ec93fc575a49516142242ef64f7dff75909ceb79
 - git: https://github.com/seanhess/web-view/
   commit: 1e113328a0b69c25baa1fe0a965b1636cf916333
-- effectful-2.5.1.0@sha256:bc202099c724feeac0cc083a719aab2d2ba91a1eb18e9150c560054008a93e12,7440
-- http-api-data-0.6.1@sha256:e389f4353cc6fc9a6522e2a6e21973fe627deac2fcae5df753fe1606a182813f,3247
-- effectful-core-2.5.1.0@sha256:252d6c7641d8ecf16d7d228ad2aced011b92f36e175acdf6ccac528e576cf7cb,4211
-- strict-mutable-base-1.1.0.0@sha256:b1c039f6b179aedb420a90cbe15d3c3e78fbaaa7146ed02700b84c6018ee734f,1430
-- uuid-types-1.0.6@sha256:595644500d36908be85cd02fb446c411555ecc5c59b7ce33d1205cfc9ceb55a6,2604
-- tls-2.0.6@sha256:387db273062241f460b9e85e86ce085877a5958a65cc30946bcc624a9f5274e2,6358
+- cookie-0.4.6@sha256:00f3a7d5604a3ccbfe89b9c52f8eb1edea753dc273d015333895118f32683ecd,1517
 - data-default-0.8.0.0@sha256:ba77cbe437508d5dfe4dec1e929121a92f0d6fc004c30fabb94c78172c0606dc,1016
 - data-default-class-0.2.0.0@sha256:788dc5c0be3981ca83ad11206e300a77ae8a1c8b9bc4f9630f563d37f540ccbd,728
-
   #- git: https://github.com/haskell-tls/hs-tls
   #commit: 1a0590cadb1f7b372858caef507ca52451e2222b
   # subdirs:
@@ -82,3 +76,5 @@ extra-deps:
 #
 # Allow a newer minor version of GHC than the snapshot specifies
 # compiler-check: newer-minor
+notify-if-nix-on-path: false
+allow-newer: true
