--- a/haskread-platform-be/haskread-platform-be.cabal
+++ b/haskread-platform-be/haskread-platform-be.cabal
@@ -77,6 +77,7 @@ library
     , directory
     , fast-logger
     , filepath
+    , google-cloud-storage
     , hashable
     , haxl
     , hedgehog
@@ -126,6 +127,7 @@ executable haskread-platform-be-exe
     , directory
     , fast-logger
     , filepath
+    , google-cloud-storage
     , hashable
     , haskread-platform-be
     , haxl
@@ -185,6 +187,7 @@ test-suite haskread-platform-be-test
     , directory
     , fast-logger
     , filepath
+    , google-cloud-storage
     , hashable
     , haskread-platform-be
     , haxl
