--- a/.github/workflows/haskell.yaml
+++ b/.github/workflows/haskell.yaml
@@ -33,8 +33,7 @@ jobs:
       uses: freckle/stack-action@v5
       with:
         working-directory: ./haskread-platform-ui/
-        stack-build-arguments: --copy-bins --ghc-options="-fno-warn-unused-imports -fno-warn-unused-matches -fno-warn-type-defaults -fno-warn-missing-export-lists"
-        stack-build-arguments-test: --ghc-options="-fno-warn-unused-imports -fno-warn-unused-matches -fno-warn-type-defaults -fno-warn-missing-export-lists"
+        stack-build-arguments: --copy-bins"
 
     - name: upload ui binary
       uses: actions/upload-artifact@v4
@@ -62,8 +61,7 @@ jobs:
       uses: freckle/stack-action@v5
       with:
         working-directory: ./haskread-platform-be/
-        stack-build-arguments: --copy-bins --ghc-options="-fno-warn-unused-imports -fno-warn-unused-matches -fno-warn-type-defaults -fno-warn-missing-export-lists"
-        stack-build-arguments-test: --ghc-options="-fno-warn-unused-imports -fno-warn-unused-matches -fno-warn-type-defaults -fno-warn-missing-export-lists"
+        stack-build-arguments: --copy-bins"
 
     - name: upload be binary
       uses: actions/upload-artifact@v4
