--- a/haskread-platform-ui/haskread-platform-ui.cabal
+++ b/haskread-platform-ui/haskread-platform-ui.cabal
@@ -25,6 +25,7 @@ source-repository head
 
 library
   exposed-modules:
+      Platform.Common.Log
       Platform.Common.Request
       Platform.Common.Types
       Platform.Common.Utils
@@ -54,10 +55,12 @@ library
     , data-default >=0.8.0
     , data-default-class >=0.2
     , effectful-core
+    , fast-logger
     , filepath
     , http-api-data
     , http-conduit
     , hyperbole
+    , mtl
     , string-conversions
     , text
     , time
@@ -80,11 +83,13 @@ executable haskread-platform-ui-exe
     , data-default >=0.8.0
     , data-default-class >=0.2
     , effectful-core
+    , fast-logger
     , filepath
     , haskread-platform-ui
     , http-api-data
     , http-conduit
     , hyperbole
+    , mtl
     , string-conversions
     , text
     , time
@@ -108,11 +113,13 @@ test-suite haskread-platform-ui-test
     , data-default >=0.8.0
     , data-default-class >=0.2
     , effectful-core
+    , fast-logger
     , filepath
     , haskread-platform-ui
     , http-api-data
     , http-conduit
     , hyperbole
+    , mtl
     , string-conversions
     , text
     , time
