--- a/haskread-platform-ui/package.yaml
+++ b/haskread-platform-ui/package.yaml
@@ -1,71 +1,71 @@
-name:                haskread-platform-ui
-version:             0.1.0.0
-github:              "tusharad/haskread-platform-ui"
-license:             MIT
-author:              "tushar"
-maintainer:          "tusharadhatrao@gmail.com"
-copyright:           "2024 tushar"
+name: haskread-platform-ui
+version: 0.1.0.0
+github: "tusharad/haskread-platform-ui"
+license: MIT
+author: "tushar"
+maintainer: "tusharadhatrao@gmail.com"
+copyright: "2024 tushar"
 
 extra-source-files:
-- README.md
-- CHANGELOG.md
+  - README.md
+  - CHANGELOG.md
 
 description: Frontend core service of haskread platform.
 
 dependencies:
-- base >= 4.7 && < 5
-- aeson
-- string-conversions
-- time
-- http-api-data
-- effectful-core
-- hyperbole
-- text
-- http-conduit
-- web-view
-- bytestring
-- hyperbole 
-- wai-middleware-static 
-- data-default-class >= 0.2
-- data-default >= 0.8.0
-- base64
-- filepath
-- fast-logger
-- mtl
-- string-interpolate
+  - base >= 4.7 && < 5
+  - aeson
+  - string-conversions
+  - time
+  - http-api-data
+  - effectful
+  - hyperbole
+  - text
+  - http-conduit
+  - web-view
+  - bytestring
+  - hyperbole
+  - wai-middleware-static
+  - data-default-class >= 0.2
+  - data-default >= 0.8.0
+  - base64
+  - filepath
+  - fast-logger
+  - mtl
+  - string-interpolate
 
 ghc-options:
-- -Wall
-- -Wcompat
-- -Widentities
-- -Wincomplete-record-updates
-- -Wincomplete-uni-patterns
-- -Wmissing-export-lists
-- -Wmissing-home-modules
-- -Wpartial-fields
-- -Wredundant-constraints
+  - -Wall
+  - -Wcompat
+  - -Widentities
+  - -Wincomplete-record-updates
+  - -Wincomplete-uni-patterns
+  - -Wmissing-export-lists
+  - -Wmissing-home-modules
+  - -Wpartial-fields
+  - -Wredundant-constraints
 
 library:
   source-dirs: src
 
 executables:
   haskread-platform-ui-exe:
-    main:                Main.hs
-    source-dirs:         app
+    main: Main.hs
+    source-dirs: app
     ghc-options:
-    - -threaded
-    - -rtsopts
-    - -with-rtsopts=-N
+      - -threaded
+      - -rtsopts
+      - -with-rtsopts=-N
     dependencies:
-    - haskread-platform-ui
+      - haskread-platform-ui
 
 tests:
   haskread-platform-ui-test:
-    main:                Spec.hs
-    source-dirs:         test
+    main: Spec.hs
+    source-dirs: test
     ghc-options:
-    - -threaded
-    - -rtsopts
-    - -with-rtsopts=-N
+      - -threaded
+      - -rtsopts
+      - -with-rtsopts=-N
     dependencies:
-    - haskread-platform-ui
+      - haskread-platform-ui
